--- a/test/style.css
+++ b/test/style.css
@@ -38,82 +38,339 @@ body {
 .sparkles-overlay::after {
   content: "";
   position: absolute;
-  width: 3px;
-  height: 3px;
+  width: 5px;
+  height: 5px;
   background: radial-gradient(
     circle,
     rgba(255, 255, 255, 0.9) 0%,
-    transparent 70%
+    transparent 80%
   );
   border-radius: 50%;
   box-shadow:
-    120px 80px 0 -1px rgba(255, 255, 255, 0.6),
-    240px 150px 0 0px rgba(255, 255, 255, 0.5),
-    360px 90px 0 -1px rgba(255, 255, 255, 0.7),
-    480px 200px 0 0px rgba(255, 255, 255, 0.4),
-    600px 120px 0 -1px rgba(255, 255, 255, 0.6),
-    720px 180px 0 0px rgba(255, 255, 255, 0.5),
-    840px 60px 0 -1px rgba(255, 255, 255, 0.7),
-    960px 140px 0 0px rgba(255, 255, 255, 0.4),
-    80px 220px 0 -1px rgba(255, 255, 255, 0.5),
-    200px 280px 0 0px rgba(255, 255, 255, 0.6),
-    320px 320px 0 -1px rgba(255, 255, 255, 0.4),
-    440px 260px 0 0px rgba(255, 255, 255, 0.7),
-    560px 380px 0 -1px rgba(255, 255, 255, 0.5),
-    680px 340px 0 0px rgba(255, 255, 255, 0.6),
-    800px 300px 0 -1px rgba(255, 255, 255, 0.4),
-    920px 420px 0 0px rgba(255, 255, 255, 0.5),
-    100px 460px 0 -1px rgba(255, 255, 255, 0.6),
-    260px 500px 0 0px rgba(255, 255, 255, 0.4),
-    380px 440px 0 -1px rgba(255, 255, 255, 0.7),
-    500px 520px 0 0px rgba(255, 255, 255, 0.5),
-    620px 480px 0 -1px rgba(255, 255, 255, 0.6),
-    740px 560px 0 0px rgba(255, 255, 255, 0.4),
-    860px 500px 0 -1px rgba(255, 255, 255, 0.5),
-    980px 540px 0 0px rgba(255, 255, 255, 0.6);
-  animation: sparkleFloat 8s linear infinite;
+    20px 600px 0 -1px rgba(255, 235, 235, 0.25),
+    40px 650px 0 0px rgba(255, 255, 255, 0.2),
+    60px 590px 0 -1px rgba(255, 255, 255, 0.3),
+    80px 600px 0 0px rgba(255, 255, 255, 0.15),
+    60px 620px 0 -1px rgba(255, 255, 255, 0.25),
+    20px 580px 0 0px rgba(255, 255, 255, 0.2),
+    40px 560px 0 -1px rgba(255, 255, 255, 0.3),
+    60px 640px 0 0px rgba(255, 255, 255, 0.15),
+    80px 620px 0 -1px rgba(255, 255, 255, 0.2),
+    120px 600px 0 -1px rgba(255, 226, 226, 0.25),
+    240px 650px 0 0px rgba(255, 255, 255, 0.2),
+    360px 590px 0 -1px rgba(255, 255, 255, 0.3),
+    480px 600px 0 0px rgba(255, 255, 255, 0.15),
+    220px 600px 0 -1px rgba(255, 226, 226, 0.25),
+    340px 650px 0 0px rgba(255, 255, 255, 0.2),
+    360px 590px 0 -1px rgba(255, 255, 255, 0.3),
+    460px 590px 0 -1px rgba(255, 255, 255, 0.3),
+    580px 600px 0 0px rgba(255, 255, 255, 0.15),
+    620px 600px 0 -1px rgba(255, 226, 226, 0.25),
+    640px 650px 0 0px rgba(255, 255, 255, 0.2),
+    760px 590px 0 -1px rgba(255, 255, 255, 0.3),
+    380px 600px 0 0px rgba(255, 255, 255, 0.15),
+    600px 620px 0 -1px rgba(255, 255, 255, 0.25),
+    720px 580px 0 0px rgba(255, 255, 255, 0.2),
+    840px 560px 0 -1px rgba(255, 255, 255, 0.3),
+    960px 640px 0 0px rgba(255, 255, 255, 0.15),
+    80px 620px 0 -1px rgba(255, 255, 255, 0.2),
+    200px 680px 0 0px rgba(255, 255, 255, 0.25),
+    320px 620px 0 -1px rgba(255, 255, 255, 0.15),
+    440px 660px 0 0px rgba(255, 255, 255, 0.3),
+    560px 580px 0 -1px rgba(255, 255, 255, 0.2),
+    680px 640px 0 0px rgba(255, 255, 255, 0.25),
+    800px 600px 0 -1px rgba(255, 255, 255, 0.15),
+    920px 620px 0 0px rgba(255, 255, 255, 0.2),
+    100px 560px 0 -1px rgba(255, 255, 255, 0.25),
+    260px 600px 0 0px rgba(255, 255, 255, 0.15),
+    380px 640px 0 -1px rgba(255, 255, 255, 0.3),
+    500px 620px 0 0px rgba(255, 255, 255, 0.2),
+    620px 680px 0 -1px rgba(255, 255, 255, 0.25),
+    740px 660px 0 0px rgba(255, 255, 255, 0.15),
+    860px 500px 0 -1px rgba(255, 255, 255, 0.2),
+    120px 80px 0 -1px rgba(255, 255, 255, 0.25),
+    240px 150px 0 0px rgba(255, 255, 255, 0.2),
+    360px 90px 0 -1px rgba(255, 255, 255, 0.3),
+    480px 200px 0 0px rgba(255, 255, 255, 0.15),
+    600px 120px 0 -1px rgba(255, 255, 255, 0.25),
+    720px 180px 0 0px rgba(255, 255, 255, 0.2),
+    840px 60px 0 -1px rgba(255, 255, 255, 0.3),
+    960px 140px 0 0px rgba(255, 255, 255, 0.15),
+    80px 220px 0 -1px rgba(255, 255, 255, 0.2),
+    200px 280px 0 0px rgba(255, 255, 255, 0.25),
+    320px 320px 0 -1px rgba(255, 255, 255, 0.15),
+    440px 260px 0 0px rgba(255, 255, 255, 0.3),
+    560px 380px 0 -1px rgba(255, 255, 255, 0.2),
+    680px 340px 0 0px rgba(255, 255, 255, 0.25),
+    800px 300px 0 -1px rgba(255, 255, 255, 0.15),
+    920px 420px 0 0px rgba(255, 255, 255, 0.2),
+    100px 460px 0 -1px rgba(255, 255, 255, 0.25),
+    260px 500px 0 0px rgba(255, 255, 255, 0.15),
+    380px 440px 0 -1px rgba(255, 255, 255, 0.3),
+    500px 520px 0 0px rgba(255, 255, 255, 0.2),
+    620px 480px 0 -1px rgba(255, 255, 255, 0.25),
+    740px 560px 0 0px rgba(255, 255, 255, 0.15),
+    860px 500px 0 -1px rgba(255, 255, 255, 0.2),
+    980px 540px 0 0px rgba(255, 255, 255, 0.25),
+    80px 40px 0 -1px rgba(255, 255, 255, 0.25),
+    200px 100px 0 0px rgba(255, 255, 255, 0.2),
+    310px 20px 0 -1px rgba(255, 255, 255, 0.3),
+    410px 160px 0 0px rgba(255, 255, 255, 0.15),
+    540px 80px 0 -1px rgba(255, 255, 255, 0.25),
+    680px 120px 0 0px rgba(255, 255, 255, 0.2),
+    800px 20px 0 -1px rgba(255, 255, 255, 0.3),
+    910px 100px 0 0px rgba(255, 255, 255, 0.15),
+    20px 110px 0 -1px rgba(255, 255, 255, 0.2),
+    150px 240px 0 0px rgba(255, 255, 255, 0.25),
+    280px 270px 0 -1px rgba(255, 255, 255, 0.15),
+    400px 210px 0 0px rgba(255, 255, 255, 0.3),
+    520px 360px 0 -1px rgba(255, 255, 255, 0.2),
+    640px 320px 0 0px rgba(255, 255, 255, 0.25),
+    790px 290px 0 -1px rgba(255, 255, 255, 0.15),
+    900px 400px 0 0px rgba(255, 255, 255, 0.2),
+    80px 440px 0 -1px rgba(255, 255, 255, 0.25),
+    240px 480px 0 0px rgba(255, 255, 255, 0.15),
+    350px 420px 0 -1px rgba(255, 255, 255, 0.3),
+    490px 510px 0 0px rgba(255, 255, 255, 0.2),
+    610px 440px 0 -1px rgba(255, 255, 255, 0.25),
+    730px 530px 0 0px rgba(255, 255, 255, 0.15),
+    830px 490px 0 -1px rgba(255, 255, 255, 0.2),
+    960px 520px 0 0px rgba(255, 255, 255, 0.25),
+    140px 90px 0 -1px rgba(255, 255, 255, 0.25),
+    280px 190px 0 0px rgba(255, 255, 255, 0.2),
+    390px 120px 0 -1px rgba(255, 255, 255, 0.3),
+    490px 260px 0 0px rgba(255, 255, 255, 0.15),
+    620px 150px 0 -1px rgba(255, 255, 255, 0.25),
+    740px 190px 0 0px rgba(255, 255, 255, 0.2),
+    890px 80px 0 -1px rgba(255, 255, 255, 0.3),
+    990px 170px 0 0px rgba(255, 255, 255, 0.15),
+    90px 270px 0 -1px rgba(255, 255, 255, 0.2),
+    260px 290px 0 0px rgba(255, 255, 255, 0.25),
+    370px 360px 0 -1px rgba(255, 255, 255, 0.15),
+    490px 290px 0 0px rgba(255, 255, 255, 0.3),
+    40px 800px 0 -1px rgba(255, 235, 235, 0.25),
+    40px 670px 0 0px rgba(255, 255, 255, 0.2),
+    80px 590px 0 -1px rgba(255, 255, 255, 0.3),
+    80px 800px 0 0px rgba(255, 255, 255, 0.15),
+    80px 640px 0 -1px rgba(255, 255, 255, 0.25),
+    40px 580px 0 0px rgba(255, 255, 255, 0.2),
+    40px 580px 0 -1px rgba(255, 255, 255, 0.3),
+    80px 640px 0 0px rgba(255, 255, 255, 0.15),
+    80px 640px 0 -1px rgba(255, 255, 255, 0.2),
+    140px 800px 0 -1px rgba(255, 226, 226, 0.25),
+    240px 670px 0 0px rgba(255, 255, 255, 0.2),
+    380px 590px 0 -1px rgba(255, 255, 255, 0.3),
+    480px 800px 0 0px rgba(255, 255, 255, 0.15),
+    240px 800px 0 -1px rgba(255, 226, 226, 0.25),
+    340px 670px 0 0px rgba(255, 255, 255, 0.2),
+    380px 590px 0 -1px rgba(255, 255, 255, 0.3),
+    480px 590px 0 -1px rgba(255, 255, 255, 0.3),
+    580px 800px 0 0px rgba(255, 255, 255, 0.15),
+    640px 800px 0 -1px rgba(255, 226, 226, 0.25),
+    640px 670px 0 0px rgba(255, 255, 255, 0.2),
+    780px 590px 0 -1px rgba(255, 255, 255, 0.3),
+    380px 800px 0 0px rgba(255, 255, 255, 0.15),
+    800px 640px 0 -1px rgba(255, 255, 255, 0.25),
+    740px 580px 0 0px rgba(255, 255, 255, 0.2),
+    840px 580px 0 -1px rgba(255, 255, 255, 0.3),
+    980px 640px 0 0px rgba(255, 255, 255, 0.15),
+    80px 640px 0 -1px rgba(255, 255, 255, 0.2),
+    400px 680px 0 0px rgba(255, 255, 255, 0.25),
+    340px 640px 0 -1px rgba(255, 255, 255, 0.15),
+    440px 680px 0 0px rgba(255, 255, 255, 0.3),
+    580px 580px 0 -1px rgba(255, 255, 255, 0.2),
+    680px 640px 0 0px rgba(255, 255, 255, 0.25),
+    800px 800px 0 -1px rgba(255, 255, 255, 0.15),
+    940px 640px 0 0px rgba(255, 255, 255, 0.2),
+    300px 580px 0 -1px rgba(255, 255, 255, 0.25),
+    280px 800px 0 0px rgba(255, 255, 255, 0.15),
+    380px 640px 0 -1px rgba(255, 255, 255, 0.3),
+    700px 640px 0 0px rgba(255, 255, 255, 0.2),
+    640px 680px 0 -1px rgba(255, 255, 255, 0.25),
+    740px 680px 0 0px rgba(255, 255, 255, 0.15),
+    880px 700px 0 -1px rgba(255, 255, 255, 0.2),
+    140px 80px 0 -1px rgba(255, 255, 255, 0.25),
+    240px 170px 0 0px rgba(255, 255, 255, 0.2),
+    380px 90px 0 -1px rgba(255, 255, 255, 0.3),
+    480px 400px 0 0px rgba(255, 255, 255, 0.15),
+    800px 140px 0 -1px rgba(255, 255, 255, 0.25),
+    740px 180px 0 0px rgba(255, 255, 255, 0.2),
+    840px 80px 0 -1px rgba(255, 255, 255, 0.3),
+    980px 140px 0 0px rgba(255, 255, 255, 0.15),
+    80px 240px 0 -1px rgba(255, 255, 255, 0.2),
+    400px 280px 0 0px rgba(255, 255, 255, 0.25),
+    340px 340px 0 -1px rgba(255, 255, 255, 0.15),
+    440px 280px 0 0px rgba(255, 255, 255, 0.3),
+    580px 380px 0 -1px rgba(255, 255, 255, 0.2),
+    680px 340px 0 0px rgba(255, 255, 255, 0.25),
+    800px 300px 0 -1px rgba(255, 255, 255, 0.15),
+    940px 440px 0 0px rgba(255, 255, 255, 0.2),
+    300px 480px 0 -1px rgba(255, 255, 255, 0.25),
+    280px 700px 0 0px rgba(255, 255, 255, 0.15),
+    380px 440px 0 -1px rgba(255, 255, 255, 0.3),
+    700px 540px 0 0px rgba(255, 255, 255, 0.2),
+    640px 480px 0 -1px rgba(255, 255, 255, 0.25),
+    740px 580px 0 0px rgba(255, 255, 255, 0.15),
+    880px 700px 0 -1px rgba(255, 255, 255, 0.2),
+    980px 540px 0 0px rgba(255, 255, 255, 0.25),
+    80px 40px 0 -1px rgba(255, 255, 255, 0.25),
+    400px 300px 0 0px rgba(255, 255, 255, 0.2),
+    330px 40px 0 -1px rgba(255, 255, 255, 0.3),
+    430px 180px 0 0px rgba(255, 255, 255, 0.15),
+    540px 80px 0 -1px rgba(255, 255, 255, 0.25),
+    680px 140px 0 0px rgba(255, 255, 255, 0.2),
+    800px 40px 0 -1px rgba(255, 255, 255, 0.3),
+    930px 300px 0 0px rgba(255, 255, 255, 0.15),
+    40px 130px 0 -1px rgba(255, 255, 255, 0.2),
+    170px 240px 0 0px rgba(255, 255, 255, 0.25),
+    280px 270px 0 -1px rgba(255, 255, 255, 0.15),
+    400px 230px 0 0px rgba(255, 255, 255, 0.3),
+    540px 380px 0 -1px rgba(255, 255, 255, 0.2),
+    640px 340px 0 0px rgba(255, 255, 255, 0.25),
+    790px 290px 0 -1px rgba(255, 255, 255, 0.15),
+    900px 400px 0 0px rgba(255, 255, 255, 0.2),
+    80px 440px 0 -1px rgba(255, 255, 255, 0.25),
+    240px 480px 0 0px rgba(255, 255, 255, 0.15),
+    370px 440px 0 -1px rgba(255, 255, 255, 0.3),
+    490px 530px 0 0px rgba(255, 255, 255, 0.2),
+    630px 440px 0 -1px rgba(255, 255, 255, 0.25),
+    730px 530px 0 0px rgba(255, 255, 255, 0.15),
+    830px 490px 0 -1px rgba(255, 255, 255, 0.2),
+    980px 540px 0 0px rgba(255, 255, 255, 0.25),
+    140px 90px 0 -1px rgba(255, 255, 255, 0.25),
+    280px 190px 0 0px rgba(255, 255, 255, 0.2),
+    390px 140px 0 -1px rgba(255, 255, 255, 0.3),
+    490px 280px 0 0px rgba(255, 255, 255, 0.15),
+    640px 170px 0 -1px rgba(255, 255, 255, 0.25),
+    740px 190px 0 0px rgba(255, 255, 255, 0.2),
+    890px 80px 0 -1px rgba(255, 255, 255, 0.3),
+    990px 170px 0 0px rgba(255, 255, 255, 0.15),
+    90px 270px 0 -1px rgba(255, 255, 255, 0.2),
+    280px 290px 0 0px rgba(255, 255, 255, 0.25),
+    370px 380px 0 -1px rgba(255, 255, 255, 0.15),
+    490px 290px 0 0px rgba(255, 255, 255, 0.3),
+    590px 480px 0 -1px rgba(255, 255, 255, 0.2),
+    690px 390px 0 0px rgba(255, 255, 255, 0.25),
+    840px 360px 0 -1px rgba(255, 255, 255, 0.15),
+    970px 460px 0 0px rgba(255, 255, 255, 0.2),
+    150px 470px 0 -1px rgba(255, 255, 255, 0.25),
+    270px 540px 0 0px rgba(255, 255, 255, 0.15),
+    390px 440px 0 -1px rgba(255, 255, 255, 0.3),
+    560px 560px 0 0px rgba(255, 255, 255, 0.2),
+    640px 470px 0 -1px rgba(255, 255, 255, 0.25),
+    780px 590px 0 0px rgba(255, 255, 255, 0.15),
+    890px 550px 0 -1px rgba(255, 255, 255, 0.2);
+  animation: sparkleFloat 5.5s linear infinite;
 }
 
 .sparkles-overlay::after {
   animation-delay: -4s;
   animation-duration: 10s;
   box-shadow:
-    150px 100px 0 -1px rgba(255, 255, 255, 0.5),
-    300px 180px 0 0px rgba(255, 255, 255, 0.4),
-    450px 120px 0 -1px rgba(255, 255, 255, 0.6),
-    600px 220px 0 0px rgba(255, 255, 255, 0.5),
-    750px 160px 0 -1px rgba(255, 255, 255, 0.4),
-    900px 200px 0 0px rgba(255, 255, 255, 0.6),
-    1050px 80px 0 -1px rgba(255, 255, 255, 0.5),
-    180px 300px 0 0px rgba(255, 255, 255, 0.4),
-    330px 360px 0 -1px rgba(255, 255, 255, 0.6),
-    480px 340px 0 0px rgba(255, 255, 255, 0.5),
-    630px 400px 0 -1px rgba(255, 255, 255, 0.4),
-    780px 380px 0 0px rgba(255, 255, 255, 0.6),
-    930px 440px 0 -1px rgba(255, 255, 255, 0.5),
-    1080px 420px 0 0px rgba(255, 255, 255, 0.4),
-    210px 520px 0 -1px rgba(255, 255, 255, 0.5),
-    360px 560px 0 0px rgba(255, 255, 255, 0.6),
-    510px 500px 0 -1px rgba(255, 255, 255, 0.4),
-    660px 580px 0 0px rgba(255, 255, 255, 0.5);
+    120px 80px 0 -1px rgba(255, 255, 255, 0.25),
+    240px 150px 0 0px rgba(255, 255, 255, 0.2),
+    360px 90px 0 -1px rgba(255, 255, 255, 0.3),
+    480px 200px 0 0px rgba(255, 255, 255, 0.15),
+    600px 120px 0 -1px rgba(255, 255, 255, 0.25),
+    720px 180px 0 0px rgba(255, 255, 255, 0.2),
+    840px 60px 0 -1px rgba(255, 255, 255, 0.3),
+    960px 140px 0 0px rgba(255, 255, 255, 0.15),
+    80px 220px 0 -1px rgba(255, 255, 255, 0.2),
+    200px 280px 0 0px rgba(255, 255, 255, 0.25),
+    320px 320px 0 -1px rgba(255, 255, 255, 0.15),
+    440px 260px 0 0px rgba(255, 255, 255, 0.3),
+    560px 380px 0 -1px rgba(255, 255, 255, 0.2),
+    680px 340px 0 0px rgba(255, 255, 255, 0.25),
+    800px 300px 0 -1px rgba(255, 255, 255, 0.15),
+    920px 420px 0 0px rgba(255, 255, 255, 0.2),
+    100px 460px 0 -1px rgba(255, 255, 255, 0.25),
+    260px 500px 0 0px rgba(255, 255, 255, 0.15),
+    380px 440px 0 -1px rgba(255, 255, 255, 0.3),
+    500px 520px 0 0px rgba(255, 255, 255, 0.2),
+    620px 480px 0 -1px rgba(255, 255, 255, 0.25),
+    740px 560px 0 0px rgba(255, 255, 255, 0.15),
+    860px 500px 0 -1px rgba(255, 255, 255, 0.2),
+    980px 540px 0 0px rgba(255, 255, 255, 0.25),
+    150px 100px 0 -1px rgba(255, 255, 255, 0.2),
+    300px 180px 0 0px rgba(255, 255, 255, 0.15),
+    450px 120px 0 -1px rgba(255, 255, 255, 0.25),
+    600px 220px 0 0px rgba(255, 255, 255, 0.2),
+    750px 160px 0 -1px rgba(255, 255, 255, 0.15),
+    900px 200px 0 0px rgba(255, 255, 255, 0.25),
+    1050px 80px 0 -1px rgba(255, 255, 255, 0.2),
+    180px 300px 0 0px rgba(255, 255, 255, 0.15),
+    330px 360px 0 -1px rgba(255, 255, 255, 0.25),
+    480px 340px 0 0px rgba(255, 255, 255, 0.2),
+    630px 400px 0 -1px rgba(255, 255, 255, 0.15),
+    780px 380px 0 0px rgba(255, 255, 255, 0.25),
+    930px 440px 0 -1px rgba(255, 255, 255, 0.2),
+    1080px 420px 0 0px rgba(255, 255, 255, 0.15),
+    210px 520px 0 -1px rgba(255, 255, 255, 0.2),
+    360px 560px 0 0px rgba(255, 255, 255, 0.25),
+    510px 500px 0 -1px rgba(255, 255, 255, 0.15),
+    970px 540px 0 0px rgba(255, 255, 255, 0.25),
+    60px 40px 0 -1px rgba(255, 255, 255, 0.25),
+    1900px 100px 0 0px rgba(255, 255, 255, 0.2),
+    300px 20px 0 -1px rgba(255, 255, 255, 0.3),
+    400px 160px 0 0px rgba(255, 255, 255, 0.15),
+    530px 80px 0 -1px rgba(255, 255, 255, 0.25),
+    650px 120px 0 0px rgba(255, 255, 255, 0.2),
+    790px 20px 0 -1px rgba(255, 255, 255, 0.3),
+    900px 100px 0 0px rgba(255, 255, 255, 0.15),
+    40px 110px 0 -1px rgba(255, 255, 255, 0.2),
+    130px 240px 0 0px rgba(255, 255, 255, 0.25),
+    260px 270px 0 -1px rgba(255, 255, 255, 0.15),
+    430px 210px 0 0px rgba(255, 255, 255, 0.3),
+    510px 360px 0 -1px rgba(255, 255, 255, 0.2),
+    620px 320px 0 0px rgba(255, 255, 255, 0.25),
+    750px 290px 0 -1px rgba(255, 255, 255, 0.15),
+    920px 400px 0 0px rgba(255, 255, 255, 0.2),
+    60px 440px 0 -1px rgba(255, 255, 255, 0.25),
+    220px 480px 0 0px rgba(255, 255, 255, 0.15),
+    330px 420px 0 -1px rgba(255, 255, 255, 0.3),
+    470px 510px 0 0px rgba(255, 255, 255, 0.2),
+    600px 440px 0 -1px rgba(255, 255, 255, 0.25),
+    720px 530px 0 0px rgba(255, 255, 255, 0.15),
+    810px 490px 0 -1px rgba(255, 255, 255, 0.2),
+    970px 520px 0 0px rgba(255, 255, 255, 0.25),
+    120px 90px 0 -1px rgba(255, 255, 255, 0.25),
+    270px 190px 0 0px rgba(255, 255, 255, 0.2),
+    380px 120px 0 -1px rgba(255, 255, 255, 0.3),
+    460px 260px 0 0px rgba(255, 255, 255, 0.15),
+    630px 150px 0 -1px rgba(255, 255, 255, 0.25),
+    770px 190px 0 0px rgba(255, 255, 255, 0.2),
+    880px 80px 0 -1px rgba(255, 255, 255, 0.3),
+    940px 170px 0 0px rgba(255, 255, 255, 0.15),
+    50px 270px 0 -1px rgba(255, 255, 255, 0.2),
+    270px 290px 0 0px rgba(255, 255, 255, 0.25),
+    320px 360px 0 -1px rgba(255, 255, 255, 0.15),
+    450px 290px 0 0px rgba(255, 255, 255, 0.3),
+    520px 480px 0 -1px rgba(255, 255, 255, 0.2),
+    680px 390px 0 0px rgba(255, 255, 255, 0.25),
+    880px 360px 0 -1px rgba(255, 255, 255, 0.15),
+    930px 460px 0 0px rgba(255, 255, 255, 0.2),
+    120px 470px 0 -1px rgba(255, 255, 255, 0.25),
+    220px 540px 0 0px rgba(255, 255, 255, 0.15),
+    320px 440px 0 -1px rgba(255, 255, 255, 0.3),
+    580px 560px 0 0px rgba(255, 255, 255, 0.2),
+    680px 470px 0 -1px rgba(255, 255, 255, 0.25),
+    730px 590px 0 0px rgba(255, 255, 255, 0.15),
+    820px 550px 0 -1px rgba(255, 255, 255, 0.2),
+    650px 580px 0 0px rgba(255, 255, 255, 0.2);
 }
 
 @keyframes sparkleFloat {
   0% {
-    opacity: 0;
-    transform: translateY(0) scale(0);
-  }
-  10% {
+    transform: translateY(0);
     opacity: 1;
-    transform: translateY(-20px) scale(1);
   }
   90% {
+    transform: translateY(-100px);
     opacity: 1;
-    transform: translateY(-80px) scale(1);
   }
   100% {
+    transform: translateY(-120px);
     opacity: 0;
-    transform: translateY(-100px) scale(0);
   }
 }
 
